Fixed checkstyle issues.