@@ -22,7 +22,9 @@ import org.apache.commons.io.IOUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.eclipse.microprofile.config.inject.ConfigProperty;
 
-/** An implementation of JwtVerifier using Jose JWT. */
+/**
+ * An implementation of JwtVerifier using Jose JWT.
+ */
 @ApplicationScoped
 public class JoseJwtVerifier implements JwtVerifier {
 
@@ -35,7 +37,9 @@ public class JoseJwtVerifier implements JwtVerifier {
   @ConfigProperty(name = "cognito.disable-auth")
   boolean cognitoDisableAuth;
 
-  /** {@inheritDoc} */
+  /**
+   * {@inheritDoc}
+   */
   @Override
   public boolean jwtContainsCognitoGroup(final String jwt, final String group) {
     if (!configIsValid()) {
@@ -60,6 +64,9 @@ public class JoseJwtVerifier implements JwtVerifier {
     return false;
   }
 
+  /**
+   * {@inheritDoc}
+   */
   @Override
   public boolean jwtContainsClaim(final String jwt, final String claim) {
     if (!configIsValid()) {
@@ -68,7 +75,7 @@ public class JoseJwtVerifier implements JwtVerifier {
 
     try {
       if (jwtIsValid(jwt, cognitoJwk.get())) {
-          return extractClaims(jwt).contains(claim);
+        return extractClaims(jwt).contains(claim);
       }
     } catch (final IOException | ParseException | JOSEException e) {
       Log.error(GlobalConstants.MICROSERVICE_NAME + "-Jwt-ValidationError", e);
@@ -77,13 +84,20 @@ public class JoseJwtVerifier implements JwtVerifier {
     return false;
   }
 
+  /**
+   * Extracts the claims from the JWT.
+   *
+   * @param jwt The JWT.
+   * @return The list of scopes.
+   * @throws ParseException If the string couldn't be parsed to a JWS object.
+   */
   public List<String> extractClaims(final String jwt) throws ParseException {
-      final JWSObject jwsObject = JWSObject.parse(jwt);
-      final Map<String, Object> payload = jwsObject.getPayload().toJSONObject();
-      if (payload.containsKey(SCOPE)) {
-        return Arrays.asList(payload.get(SCOPE).toString().split(" "));
-      }
-      return List.of();
+    final JWSObject jwsObject = JWSObject.parse(jwt);
+    final Map<String, Object> payload = jwsObject.getPayload().toJSONObject();
+    if (payload.containsKey(SCOPE)) {
+      return Arrays.asList(payload.get(SCOPE).toString().split(" "));
+    }
+    return List.of();
   }
 
   private boolean configIsValid() {
@@ -92,16 +106,28 @@ public class JoseJwtVerifier implements JwtVerifier {
         || StringUtils.isEmpty(cognitoJwk.get());
   }
 
+  /**
+   * Verify the JWT token has the correct signature and is not expired.
+   *
+   * @param jwt The JWT.
+   * @param jwk The JWK, base64 encoded.
+   * @return true if the JWT is valid, false otherwise.
+   * @throws ParseException If the string couldn't be parsed to a JWS object.
+   * @throws IOException    If the input stream couldn't be read.
+   * @throws JOSEException  If the RSA JWK extraction failed.
+   */
   public boolean jwtIsValid(final String jwt, final String jwk)
       throws ParseException, IOException, JOSEException {
     final JWSObject jwsObject = JWSObject.parse(jwt);
     final String jwkDecoded = new String(Base64.getDecoder().decode(jwk));
-    final JWKSet publicKeys = JWKSet.load(IOUtils.toInputStream(jwkDecoded, Charset.defaultCharset()));
-    final JWSVerifier verifier = new RSASSAVerifier(publicKeys.getKeyByKeyId(jwsObject.getHeader().getKeyID()).toRSAKey());
+    final JWKSet publicKeys = JWKSet.load(
+        IOUtils.toInputStream(jwkDecoded, Charset.defaultCharset()));
+    final JWSVerifier verifier = new RSASSAVerifier(
+        publicKeys.getKeyByKeyId(jwsObject.getHeader().getKeyID()).toRSAKey());
     if (jwsObject.verify(verifier)) {
       final Map<String, Object> payload = jwsObject.getPayload().toJSONObject();
       if (payload.containsKey("exp")) {
-        return (Long)payload.get("exp") > new Date().getTime();
+        return (Long) payload.get("exp") > new Date().getTime();
       }
     }
 
